--- a/07-GMPR.Rmd
+++ b/07-GMPR.Rmd
@@ -1,12 +1,12 @@
-# GMPR 
+# GMPR
 
-A recent extension of the RLE DESeq method is the Geometric mean of Pairwise ratios (GMPR) approach. This method reverses the steps of RLE, and instead calculates the median count ratio of the non-zero counts between pairs of samples as although only a small number of taxa are likely to be shared for every sample, it is more likely that there are  many shared taxa between pairs. Use pairwise results to calculate the size factor for each sample. This method has slow computation, but is robust to differential and outlier taxas. It addresses sparsity, but not composition. 
-The size factors can be inputted to DESeq and a VST transformation applied additionally. It is a newer method, and has unfortunately not been included in many benchmarking studies, although initial results show it to be more powerful than DESeq, not surprisingly, as it uses more data, as zero counts do not need to be discarded. It assumes there is a large invariant portion of the count data, similar to other methods.
+A recent extension of the RLE DESeq method is the Geometric mean of Pairwise ratios (GMPR) approach [@chen2018]. This method reverses the steps of RLE, and instead calculates the median count ratio of the non-zero counts between pairs of samples as although only a small number of taxa are likely to be shared for every sample, it is more likely that there are many shared taxa between pairs. It then uses the pairwise results to calculate the size factor for each sample. This method has slow computation, but is robust to differential and outlier taxa. It addresses sparsity, but not composition. The size factors can be inputted to DESeq and a VST transformation applied additionally. It is a newer method, and has unfortunately not been included in many benchmarking studies, although initial results show it to be more powerful than DESeq, not surprisingly, as it uses more data, as zero counts do not need to be discarded. It assumes there is a large invariant portion of the count data, similar to other methods.
+
+## GMPR Implementation
 
 ```{r}
 norm_GMPR <- function(ps, scale = 1e6){
   require(GMPR, quietly = T)
-  #browser()
     # Calculate GMPR size factor
     # Row - features, column - samples
     otu <- as(otu_table(ps), "matrix")
@@ -32,9 +32,18 @@ norm_GMPR <- function(ps, scale = 1e6){
 ## Global Patterns GMPR
 
 ```{r}
+# Normalize
 gp_gmpr <- norm_GMPR(gp_raw)
-plot_norm_changes(gp_gmpr, gp_raw)
-plot_norm_changes(gp_gmpr, gp_tss, x_lab = "TSS", y_lab = "GMPR")
-plot_norm_changes(gp_gmpr, gp_css, x_lab = "CSS", y_lab = "GMPR")
-```
 
+
+# Compare to other methods like before
+plot_norm_changes(gp_gmpr, gp_raw, 
+                  x_lab = "GMPR", y_lab = "Raw Counts",
+                  title = "GMPR normalization vs Raw Counts")
+plot_norm_changes(gp_gmpr, gp_tss,
+                  x_lab = "TSS", y_lab = "GMPR", 
+                  title = "TSS vs GMPR")
+plot_norm_changes(gp_gmpr, gp_css,
+                  x_lab = "CSS", y_lab = "GMPR", 
+                  title = "CSS vs GMPR" )
+```
