--- a/03-rarefying.Rmd
+++ b/03-rarefying.Rmd
@@ -1,119 +1,116 @@
-# Rarefying 
+# Rarefying
 
+## About Rarefying
 
-Another common technique that standardizes the library size across samples is to perform rarefying. Rarefying takes subsamples of the counts from the original sample of size of the new minimum library size. 
+Rarefying is another common normalization technique that standardizes the library size across samples that was originally used in ecology. This method standardizes the read depth across all samples. To perform this method we first choose a minimum library size. Looking at rarefaction/collectors curves, or using a certain percentile can guide choosing this cutoff. Then all samples that have a read depth below this cutoff are discarded. Thus this method has a built-in filtering step. Next, we sample without replacement of the size of the chosen cutoff. It can be a standalone method or combined with other methods and transformations.
 
-One very common method is Rarefying, a method originally used in ecology. This method standardizes the read depth across all samples. To perform this method we first choose a minimum library size. Looking at rarefaction/collectors curves, or using a certain percentile can guide choosing this cutoff. Then all samples that have a read depth below this cutoff are discarded. Thus this method has a built-in filtering step. 
-Next, we sample without replacement of the size of the chosen cutoff. 
-It can be a standalone method or combined with other methods and transformations. 
+<!-- Fix second to last sentence - confusing  -->
 
-This is a very commonly used method, but it has also been criticized. First of all, it throws away valid data, and this results in a loss of power and an increase in false positives. Rare taxa can be removed in this approach too. 
-It is however encouraged when we have widely different library sizes as it can lower the false discovery rate, and has also been shown to perform well in community-level analysis, as it completely standardizes the read count depth, and some methods are sensitive to differences in read count. Has been shown to separate by biological signal in ordination methods based on presence/absence 
+This is a very commonly used method, but it has also been criticized [@mcmurdie2014]. First of all, it throws away valid data, and this results in a loss of power and an increase in false positives. Rare taxa can be removed in this approach too. It is however encouraged when we have widely different library sizes as it can lower the false discovery rate [@weiss2017], and has also been shown to perform well in community-level analysis [@mcknight2019], as it completely standardizes the read count depth, and some methods are sensitive to differences in read count. Rarefying has been shown to separate by biological signal in ordination methods based on presence/absence.
 
+## Rarefying implementation 
 
-## Rarefying on Global Patterns
-
-The first difficulty is choosing a minimum sampling depth. The Global Patterns dataset already has a very high sampling depth for all samples, so we will chose the lowest as the minimum depth to rarefy to. 
-
-The following function returns a rarefied `phyloseq` object. Since we chose the minimum sampling depth, no samples have been dropped. In data sets where we have low sampling depth there is a balance between how many samples to drop and how low to set the minimum depth to. 
+The following function returns a rarefied `phyloseq` object. We can either pass in the minimum sampling depth as a second argument, or use the default minimum depth of the samples. 
 
 ```{r, gp_rare}
 norm_rarefy <- function(phyloseq, depth = min(sample_sums(phyloseq))){
     return(phyloseq::rarefy_even_depth(phyloseq,sample.size = depth))
 }
     
+```
+
+## Rarefying on Global Patterns
+
+We use the above function to rarefy the Global Patterns data. The first difficulty is choosing a minimum sampling depth. The Global Patterns dataset already has a very high sampling depth for all samples, so we will chose the lowest as the minimum depth to rarefy to.Since we chose the minimum sampling depth, no samples have been dropped. In data sets where we have low sampling depth there is a balance between how many samples to drop and how low to set the minimum depth to.
+
+```{r}
 gp_rare <- norm_rarefy(gp_raw)
 ```
 
-
-We can check that indeed all samples now have the same sampling depth, which is 15905. Note that the highest sampling depth in this datset was almost 2 million, so we have discarded a lot of data to reduce to 15905.
+We can check that indeed all samples now have the same sampling depth, which is 15905. Note that the highest sampling depth in this dataset was almost 2 million, so we have discarded a lot of data to reduce to 15905.
 
 ```{r sample_sums_after_rare}
 max(sample_sums(gp_raw))
 sample_sums(gp_rare)
 ```
 
-
+We can again compare the PCoA plots between rarefied and raw counts, coloring by sample type to view clusters. 
 
 ```{r, rare_ordination}
 plot_ordination(gp_raw,
                 phyloseq::ordinate(gp_raw, "PCoA", "bray"),
                 color = "SampleType", 
-                title = "Raw counts") +
+                title = "PCoA on Raw counts") +
 plot_ordination(gp_rare,
                 phyloseq::ordinate(gp_rare, "PCoA", "bray"),
                 color = "SampleType", 
-                title = "Rarefied counts")+
+                title = "PCoA on Rarefied counts")+
   plot_layout(guides = 'collect')
 ```
 
 
-Now see the comparison using the sampling depth as the color 
-
-```{r, rare_depth_ordcolor}
-plot_ordination(gp_raw,
-                gp_raw_dist,
-                color = "depth", 
-                title = "Raw counts")
-```
-
-We dont see any extreme patterns with sampling depth, but this might additionally be due to the differences in different locations might have different sampling depths. This comparison might be more interesting when we only have one location we are sampling from. 
-
-
-Now examine how the distance matrices change before/after normalization
+Now examine how the distance matrices change before/after normalization. We see a similar pattern to TSS when distance matrices calculated from rarefied counts are compared to those from the raw counts. 
 
 ```{r, rare_plot_ordination}
+# Identify any samples filtered in rarefying process 
 rare_samples <- sample_names(gp_rare)
 gp_raw_match <- prune_samples(rare_samples, gp_raw)
-
-data.frame(raw = as.numeric(phyloseq::distance(gp_raw_match, "bray")), 
-           norm = as.numeric(phyloseq::distance(gp_rare, "bray")), 
-           # Fix to be the saved sampling depth - needed for later
-           diff = as.numeric(dist(get_variable(gp_raw_match, "depth")))) %>% 
-    ggplot(aes(x = raw, y = norm, color = diff)) + 
-        geom_point() + 
-        geom_abline() +
-    ggtitle("Rarefied vs Raw")
+plot_norm_changes(gp_rare, gp_raw_match,
+                  x_lab = "Raw counts", y_lab = "Rarefied counts", 
+                  title = "Distance metric comparision between Raw counts and Rarefied counts ")
 
 ## Compare to tss
 gp_tss_match <- norm_TSS(gp_raw_match)
-length(as.numeric(dist(get_variable(gp_tss_match, "depth"))))
-data.frame(raw = as.numeric(phyloseq::distance(gp_tss_match, "bray")), 
-           norm = as.numeric(phyloseq::distance(gp_rare, "bray")), 
-           # Fix to be the saved sampling depth - needed for later
-           diff = as.numeric(dist(get_variable(gp_raw_match, "depth")))) %>% 
-    ggplot(aes(x = raw, y = norm, color = diff)) + 
-        geom_point() + 
-        geom_abline() +
-    ggtitle("Rarefied vs TSS")
-# Doesnt seem to be much difference between rarefied and tss
+plot_norm_changes(gp_rare, gp_tss,
+                  x_lab = "TSS", y_lab = "Rarefied", 
+                  title = "Distance metric comparision between TSS normalization and Rarefied counts ")
 
 ```
 
+
+
+
+
+<!-- Doesnt seem to be much difference between rarefied and tss -->
 
 <!-- ## Rarefying on HMP dataset -->
 
 <!-- ```{r, eval = F} -->
+
 <!-- summary(sample_sums(hmp_raw)) -->
+
 <!-- hmp_rare <- rarefy_even_depth(hmp_raw, -->
+
 <!--                              sample.size = 3000) -->
+
 <!-- ``` -->
 
 <!-- Ordination  -->
 
 <!-- ```{r, eval = F} -->
+
 <!-- plot_ordination(hmp_raw, -->
+
 <!--                 hmp_raw_dist, color = "sampling_depth",  -->
+
 <!--                 title = "Raw counts") -->
+
 <!-- hmp_rare_dist <- phyloseq::ordinate(hmp_rare, "PCoA", "bray") -->
+
 <!-- plot_ordination(hmp_rare, -->
+
 <!--                 hmp_rare_dist, -->
+
 <!--                 color = "sampling_depth",  -->
+
 <!--                 title = "Rarefied counts") -->
+
 <!-- ``` -->
 
 <!-- Compare distances - need to work on this since with rarefying there are fewer points -->
-<!-- ```{r} -->
-<!-- #plot_norm_changes(hmp_rare, hmp_tss) -->
-<!-- ``` -->
 
+<!-- ```{r} -->
+
+<!-- #plot_norm_changes(hmp_rare, hmp_tss) -->
+
+<!-- ``` -->
