--- a/book.bib
+++ b/book.bib
@@ -67,3 +67,155 @@ Subject{\_}term: Data mining;Metagenomics;Statistical methods
 Subject{\_}term{\_}id: data-mining;metagenomics;statistical-methods},
 	langid = {en}
 }
+
+@article{aitchison1982,
+	title = {The Statistical Analysis of Compositional Data},
+	author = {{Aitchison}, {J.}},
+	year = {1982},
+	date = {1982},
+	journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+	pages = {139--160},
+	volume = {44},
+	number = {2},
+	doi = {10.1111/j.2517-6161.1982.tb01195.x},
+	url = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/j.2517-6161.1982.tb01195.x},
+	note = {{\_}eprint: https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/j.2517-6161.1982.tb01195.x},
+	langid = {en}
+}
+
+@article{mcmurdie2013,
+	title = {phyloseq: An R Package for Reproducible Interactive Analysis and Graphics of Microbiome Census Data},
+	author = {{McMurdie}, {Paul J.} and {Holmes}, {Susan}},
+	year = {2013},
+	month = {04},
+	date = {2013-04-22},
+	journal = {PLOS ONE},
+	pages = {e61217},
+	volume = {8},
+	number = {4},
+	doi = {10.1371/journal.pone.0061217},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0061217},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
+
+@article{caporaso2011,
+	title = {Global patterns of 16S rRNA diversity at a depth of millions of sequences per sample},
+	author = {{Caporaso}, {J. Gregory} and {Lauber}, {Christian L.} and {Walters}, {William A.} and {Berg-Lyons}, {Donna} and {Lozupone}, {Catherine A.} and {Turnbaugh}, {Peter J.} and {Fierer}, {Noah} and {Knight}, {Rob}},
+	year = {2011},
+	month = {03},
+	date = {2011-03-15},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {4516--4522},
+	volume = {108},
+	number = {Supplement 1},
+	doi = {10.1073/pnas.1000080107},
+	url = {https://www.pnas.org/content/108/Supplement_1/4516},
+	note = {Publisher: National Academy of Sciences
+Section: Colloquium Paper
+PMID: 20534432},
+	langid = {en}
+}
+
+@article{mcmurdie2014,
+	title = {Waste Not, Want Not: Why Rarefying Microbiome Data Is Inadmissible},
+	author = {{McMurdie}, {Paul J.} and {Holmes}, {Susan}},
+	year = {2014},
+	month = {04},
+	date = {2014-04-03},
+	journal = {PLOS Computational Biology},
+	pages = {e1003531},
+	volume = {10},
+	number = {4},
+	doi = {10.1371/journal.pcbi.1003531},
+	url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003531},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
+
+@article{weiss2017,
+	title = {Normalization and microbial differential abundance strategies depend upon data characteristics},
+	author = {{Weiss}, {Sophie} and {Xu}, {Zhenjiang Zech} and {Peddada}, {Shyamal} and {Amir}, {Amnon} and {Bittinger}, {Kyle} and {Gonzalez}, {Antonio} and {Lozupone}, {Catherine} and {Zaneveld}, {Jesse R.} and {Vázquez-Baeza}, {Yoshiki} and {Birmingham}, {Amanda} and {Hyde}, {Embriette R.} and {Knight}, {Rob}},
+	year = {2017},
+	month = {03},
+	date = {2017-03-03},
+	journal = {Microbiome},
+	pages = {27},
+	volume = {5},
+	number = {1},
+	doi = {10.1186/s40168-017-0237-y},
+	url = {https://doi.org/10.1186/s40168-017-0237-y},
+	langid = {en}
+}
+
+@article{mcknight2019,
+	title = {Methods for normalizing microbiome data: An ecological perspective},
+	author = {{McKnight}, {Donald T.} and {Huerlimann}, {Roger} and {Bower}, {Deborah S.} and {Schwarzkopf}, {Lin} and {Alford}, {Ross A.} and {Zenger}, {Kyall R.}},
+	year = {2019},
+	date = {2019},
+	journal = {Methods in Ecology and Evolution},
+	pages = {389--400},
+	volume = {10},
+	number = {3},
+	doi = {10.1111/2041-210X.13115},
+	url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13115},
+	note = {{\_}eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.13115},
+	langid = {en}
+}
+
+@article{anders2010,
+	title = {Differential expression analysis for sequence count data},
+	author = {{Anders}, {Simon} and {Huber}, {Wolfgang}},
+	year = {2010},
+	month = {10},
+	date = {2010-10-27},
+	journal = {Genome Biology},
+	pages = {R106},
+	volume = {11},
+	number = {10},
+	doi = {10.1186/gb-2010-11-10-r106},
+	url = {https://doi.org/10.1186/gb-2010-11-10-r106}
+}
+
+@article{robinson2010,
+	title = {A scaling normalization method for differential expression analysis of RNA-seq data},
+	author = {{Robinson}, {Mark D.} and {Oshlack}, {Alicia}},
+	year = {2010},
+	month = {03},
+	date = {2010-03-02},
+	journal = {Genome Biology},
+	pages = {R25},
+	volume = {11},
+	number = {3},
+	doi = {10.1186/gb-2010-11-3-r25},
+	url = {https://doi.org/10.1186/gb-2010-11-3-r25}
+}
+
+@article{chen2018,
+	title = {GMPR: A robust normalization method for zero-inflated count data with application to microbiome sequencing data},
+	author = {{Chen}, {Li} and {Reeve}, {James} and {Zhang}, {Lujun} and {Huang}, {Shengbing} and {Wang}, {Xuefeng} and {Chen}, {Jun}},
+	year = {2018},
+	month = {04},
+	date = {2018-04-02},
+	journal = {PeerJ},
+	pages = {e4600},
+	volume = {6},
+	doi = {10.7717/peerj.4600},
+	url = {https://peerj.com/articles/4600},
+	note = {Publisher: PeerJ Inc.},
+	langid = {en}
+}
+
+@article{kumar2018,
+	title = {Analysis and correction of compositional bias in sparse sequencing count data},
+	author = {{Kumar}, {M. Senthil} and {Slud}, {Eric V.} and {Okrah}, {Kwame} and {Hicks}, {Stephanie C.} and {Hannenhalli}, {Sridhar} and {Corrada Bravo}, {Héctor}},
+	year = {2018},
+	month = {11},
+	date = {2018-11-06},
+	journal = {BMC Genomics},
+	pages = {799},
+	volume = {19},
+	number = {1},
+	doi = {10.1186/s12864-018-5160-5},
+	url = {https://doi.org/10.1186/s12864-018-5160-5}
+}
